--- a/data/glade/main-window.glade
+++ b/data/glade/main-window.glade
@@ -134,8 +134,8 @@
                         <property name="tooltip" translatable="yes">Send a new Direct Message to one of your friends</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">False</property>
-                        <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                         <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="image10">
                             <property name="visible">True</property>
@@ -445,16 +445,127 @@
             <property name="visible">True</property>
             <property name="spacing">1</property>
             <child>
-              <widget class="GtkImage" id="expand_image">
+              <widget class="GtkVBox" id="vbox2">
                 <property name="visible">True</property>
-                <property name="yalign">0</property>
-                <property name="xpad">7</property>
-                <property name="ypad">5</property>
-                <property name="stock">gtk-missing-image</property>
+                <property name="orientation">vertical</property>
+                <child>
+                  <widget class="GtkImage" id="expand_image">
+                    <property name="visible">True</property>
+                    <property name="yalign">0</property>
+                    <property name="xpad">7</property>
+                    <property name="ypad">5</property>
+                    <property name="stock">gtk-missing-image</property>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkHBox" id="expand_user_box">
+                    <property name="visible">True</property>
+                    <child>
+                      <widget class="GtkButton" id="expanded_tweet_dm_button">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip" translatable="yes">Send a Direct Message to this user.</property>
+                        <child>
+                          <widget class="GtkImage" id="expanded_tweet_dm_image">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-leave-fullscreen</property>
+                          </widget>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkVSeparator" id="vseparator3">
+                        <property name="visible">True</property>
+                        <property name="orientation">vertical</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkButton" id="expanded_tweet_view_users_profile_button">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip" translatable="yes">View this user's profile.</property>
+                        <child>
+                          <widget class="GtkImage" id="expanded_tweet_view_users_profile_image">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-info</property>
+                          </widget>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkVSeparator" id="vseparator2">
+                        <property name="visible">True</property>
+                        <property name="orientation">vertical</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">3</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkButton" id="expanded_tweet_view_users_timeline_button">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip" translatable="yes">View this users most recent Tweets &amp; status updates.</property>
+                        <child>
+                          <widget class="GtkImage" id="expanded_tweet_view_users_timeline_image">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-home</property>
+                          </widget>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">4</property>
+                      </packing>
+                    </child>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
               </widget>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkVSeparator" id="vseparator4">
+                <property name="visible">True</property>
+                <property name="orientation">vertical</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -469,7 +580,17 @@
                 </child>
               </widget>
               <packing>
-                <property name="position">1</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkVSeparator" id="vseparator5">
+                <property name="visible">True</property>
+                <property name="orientation">vertical</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">3</property>
               </packing>
             </child>
             <child>
@@ -477,17 +598,31 @@
                 <property name="visible">True</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <placeholder/>
+                  <widget class="GtkLabel" id="tweet_control_label">
+                    <property name="visible">True</property>
+                    <property name="label" translatable="yes">Tweet
+_Controls</property>
+                    <property name="use_markup">True</property>
+                    <property name="use_underline">True</property>
+                    <property name="justify">center</property>
+                    <property name="mnemonic_widget">expanded_tweet_reply_button</property>
+                    <property name="ellipsize">end</property>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">0</property>
+                  </packing>
                 </child>
                 <child>
                   <widget class="GtkHBox" id="expand_action_box">
                     <property name="visible">True</property>
-                    <property name="homogeneous">True</property>
                     <child>
                       <widget class="GtkButton" id="expanded_tweet_reply_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="tooltip" translatable="yes">Reply to this Tweet.</property>
                         <child>
                           <widget class="GtkImage" id="expanded_tweet_reply_image">
                             <property name="visible">True</property>
@@ -506,6 +641,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="tooltip" translatable="yes">Re-Tweet this Tweet.</property>
                         <child>
                           <widget class="GtkImage" id="expanded_tweet_retweet_image">
                             <property name="visible">True</property>
@@ -520,19 +656,11 @@
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkButton" id="expanded_tweet_dm_button">
+                      <widget class="GtkVSeparator" id="vseparator1">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <child>
-                          <widget class="GtkImage" id="expanded_tweet_dm_image">
-                            <property name="visible">True</property>
-                            <property name="stock">gtk-leave-fullscreen</property>
-                          </widget>
-                        </child>
+                        <property name="orientation">vertical</property>
                       </widget>
                       <packing>
-                        <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="position">2</property>
                       </packing>
@@ -542,6 +670,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="tooltip" translatable="yes">Give this Tweet a *shiny star* and make it one of your favorite Tweet as one of your favorite Tweets.</property>
                         <child>
                           <widget class="GtkImage" id="image15">
                             <property name="visible">True</property>
@@ -552,7 +681,6 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="pack_type">end</property>
                         <property name="position">3</property>
                       </packing>
                     </child>
@@ -560,7 +688,8 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">3</property>
+                    <property name="pack_type">end</property>
+                    <property name="position">1</property>
                   </packing>
                 </child>
               </widget>
@@ -568,7 +697,7 @@
                 <property name="expand">False</property>
                 <property name="fill">False</property>
                 <property name="pack_type">end</property>
-                <property name="position">2</property>
+                <property name="position">4</property>
               </packing>
             </child>
           </widget>
