--- a/data/main-window.ui
+++ b/data/main-window.ui
@@ -65,8 +65,8 @@
             <property name="tooltip" translatable="yes">Send a new Direct Message to one of your friends</property>
             <property name="label">New _DM</property>
           </object>
-          <accelerator key="Return" modifiers="GDK_SHIFT_MASK"/>
           <accelerator key="d" modifiers="GDK_CONTROL_MASK"/>
+          <accelerator key="Return" modifiers="GDK_SHIFT_MASK"/>
         </child>
         <child>
           <object class="GtkAction" id="tweets_make_fave">
@@ -310,16 +310,127 @@
             <property name="visible">True</property>
             <property name="spacing">1</property>
             <child>
-              <object class="GtkImage" id="expand_image">
+              <object class="GtkVBox" id="vbox2">
                 <property name="visible">True</property>
-                <property name="yalign">0</property>
-                <property name="xpad">7</property>
-                <property name="ypad">5</property>
-                <property name="stock">gtk-missing-image</property>
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkImage" id="expand_image">
+                    <property name="visible">True</property>
+                    <property name="yalign">0</property>
+                    <property name="xpad">7</property>
+                    <property name="ypad">5</property>
+                    <property name="stock">gtk-missing-image</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkHBox" id="expand_user_box">
+                    <property name="visible">True</property>
+                    <child>
+                      <object class="GtkButton" id="expanded_tweet_dm_button">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip-text" translatable="yes">Send a Direct Message to this user.</property>
+                        <child>
+                          <object class="GtkImage" id="expanded_tweet_dm_image">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-leave-fullscreen</property>
+                          </object>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkVSeparator" id="vseparator3">
+                        <property name="visible">True</property>
+                        <property name="orientation">vertical</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="expanded_tweet_view_users_profile_button">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip-text" translatable="yes">View this user's profile.</property>
+                        <child>
+                          <object class="GtkImage" id="expanded_tweet_view_users_profile_image">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-info</property>
+                          </object>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkVSeparator" id="vseparator2">
+                        <property name="visible">True</property>
+                        <property name="orientation">vertical</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">3</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="expanded_tweet_view_users_timeline_button">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip-text" translatable="yes">View this users most recent Tweets &amp; status updates.</property>
+                        <child>
+                          <object class="GtkImage" id="expanded_tweet_view_users_timeline_image">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-home</property>
+                          </object>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">4</property>
+                      </packing>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkVSeparator" id="vseparator4">
+                <property name="visible">True</property>
+                <property name="orientation">vertical</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -334,7 +445,17 @@
                 </child>
               </object>
               <packing>
-                <property name="position">1</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkVSeparator" id="vseparator5">
+                <property name="visible">True</property>
+                <property name="orientation">vertical</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">3</property>
               </packing>
             </child>
             <child>
@@ -342,17 +463,31 @@
                 <property name="visible">True</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <placeholder/>
+                  <object class="GtkLabel" id="tweet_control_label">
+                    <property name="visible">True</property>
+                    <property name="label" translatable="yes">Tweet
+_Controls</property>
+                    <property name="use_markup">True</property>
+                    <property name="use_underline">True</property>
+                    <property name="justify">center</property>
+                    <property name="mnemonic_widget">expanded_tweet_reply_button</property>
+                    <property name="ellipsize">end</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">0</property>
+                  </packing>
                 </child>
                 <child>
                   <object class="GtkHBox" id="expand_action_box">
                     <property name="visible">True</property>
-                    <property name="homogeneous">True</property>
                     <child>
                       <object class="GtkButton" id="expanded_tweet_reply_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="tooltip-text" translatable="yes">Reply to this Tweet.</property>
                         <child>
                           <object class="GtkImage" id="expanded_tweet_reply_image">
                             <property name="visible">True</property>
@@ -371,6 +506,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="tooltip-text" translatable="yes">Re-Tweet this Tweet.</property>
                         <child>
                           <object class="GtkImage" id="expanded_tweet_retweet_image">
                             <property name="visible">True</property>
@@ -385,19 +521,11 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="expanded_tweet_dm_button">
+                      <object class="GtkVSeparator" id="vseparator1">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
-                        <child>
-                          <object class="GtkImage" id="expanded_tweet_dm_image">
-                            <property name="visible">True</property>
-                            <property name="stock">gtk-leave-fullscreen</property>
-                          </object>
-                        </child>
+                        <property name="orientation">vertical</property>
                       </object>
                       <packing>
-                        <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="position">2</property>
                       </packing>
@@ -407,6 +535,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="tooltip-text" translatable="yes">Give this Tweet a *shiny star* and make it one of your favorite Tweet as one of your favorite Tweets.</property>
                         <child>
                           <object class="GtkImage" id="image15">
                             <property name="visible">True</property>
@@ -417,7 +546,6 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="pack_type">end</property>
                         <property name="position">3</property>
                       </packing>
                     </child>
@@ -425,7 +553,8 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">3</property>
+                    <property name="pack_type">end</property>
+                    <property name="position">1</property>
                   </packing>
                 </child>
               </object>
@@ -433,7 +562,7 @@
                 <property name="expand">False</property>
                 <property name="fill">False</property>
                 <property name="pack_type">end</property>
-                <property name="position">2</property>
+                <property name="position">4</property>
               </packing>
             </child>
           </object>
