Greet-Tweet-Know 0.0.eCa9: UI & network timer improvements
Nothing big.  I've just selected some better icons for replying, retweet, and dm'ing.  I've also improve Greet-Tweet-Know's network timer so it handles Twitter's RateLimit better.

This however does require the latest libsoup-2.4, at least version 2.16.0.9.  They've depricated their old '..._get_header' method and have created different methods, which honestly make lil sense, but non-the-less its now a requirement.  I love libsoup & so I'm keeping my code up to date.  The latest libsoup should be available in your various update repo depending on your distro.

Committed on: 2009-04-13 @ 10:12:16 PM

--- a/data/glade/main-window.glade
+++ b/data/glade/main-window.glade
@@ -134,12 +134,12 @@
                         <property name="tooltip" translatable="yes">Send a new Direct Message to one of your friends</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">False</property>
-                        <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
+                        <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="image10">
                             <property name="visible">True</property>
-                            <property name="stock">gtk-leave-fullscreen</property>
+                            <property name="stock">gtk-jump-to</property>
                           </widget>
                         </child>
                       </widget>
@@ -180,7 +180,7 @@
                         <child internal-child="image">
                           <widget class="GtkImage" id="image8">
                             <property name="visible">True</property>
-                            <property name="stock">gtk-convert</property>
+                            <property name="stock">gtk-redo</property>
                           </widget>
                         </child>
                       </widget>
@@ -196,7 +196,7 @@
                         <child internal-child="image">
                           <widget class="GtkImage" id="image9">
                             <property name="visible">True</property>
-                            <property name="stock">gtk-redo</property>
+                            <property name="stock">gtk-convert</property>
                           </widget>
                         </child>
                       </widget>
@@ -474,7 +474,7 @@
                         <child>
                           <widget class="GtkImage" id="expanded_tweet_dm_image">
                             <property name="visible">True</property>
-                            <property name="stock">gtk-leave-fullscreen</property>
+                            <property name="stock">gtk-jump-to</property>
                           </widget>
                         </child>
                       </widget>
@@ -626,7 +626,7 @@ _Controls</property>
                         <child>
                           <widget class="GtkImage" id="expanded_tweet_reply_image">
                             <property name="visible">True</property>
-                            <property name="stock">gtk-convert</property>
+                            <property name="stock">gtk-redo</property>
                           </widget>
                         </child>
                       </widget>
@@ -645,7 +645,7 @@ _Controls</property>
                         <child>
                           <widget class="GtkImage" id="expanded_tweet_retweet_image">
                             <property name="visible">True</property>
-                            <property name="stock">gtk-redo</property>
+                            <property name="stock">gtk-convert</property>
                           </widget>
                         </child>
                       </widget>
@@ -661,6 +661,7 @@ _Controls</property>
                         <property name="orientation">vertical</property>
                       </widget>
                       <packing>
+                        <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="position">2</property>
                       </packing>
