--- a/data/accounts-dialog.ui
+++ b/data/accounts-dialog.ui
@@ -30,8 +30,8 @@
               <packing>
                 <property name="left_attach">1</property>
                 <property name="right_attach">2</property>
-                <property name="top_attach">1</property>
-                <property name="bottom_attach">2</property>
+                <property name="top_attach">2</property>
+                <property name="bottom_attach">3</property>
                 <property name="y_options"></property>
               </packing>
             </child>
@@ -44,6 +44,8 @@
               <packing>
                 <property name="left_attach">1</property>
                 <property name="right_attach">2</property>
+                <property name="top_attach">1</property>
+                <property name="bottom_attach">2</property>
                 <property name="y_options"></property>
               </packing>
             </child>
@@ -57,7 +59,7 @@
               </object>
               <packing>
                 <property name="top_attach">1</property>
-                <property name="bottom_attach">2</property>
+                <property name="bottom_attach">4</property>
                 <property name="x_options"></property>
                 <property name="y_options"></property>
               </packing>
@@ -71,6 +73,8 @@
                 <property name="mnemonic_widget">username_entry</property>
               </object>
               <packing>
+                <property name="top_attach">1</property>
+                <property name="bottom_attach">2</property>
                 <property name="x_options"></property>
                 <property name="y_options"></property>
               </packing>
@@ -93,10 +97,26 @@
               </packing>
             </child>
             <child>
-              <placeholder/>
+              <object class="GtkLabel" id="service_label">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">_Server	</property>
+                <property name="use_underline">True</property>
+                <property name="mnemonic_widget">service_comboboxentry</property>
+              </object>
+              <packing>
+                <property name="y_options"></property>
+              </packing>
             </child>
             <child>
-              <placeholder/>
+              <object class="GtkComboBoxEntry" id="service_comboboxentry">
+                <property name="visible">True</property>
+                <property name="model">services_list</property>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="right_attach">2</property>
+                <property name="y_options"></property>
+              </packing>
             </child>
           </object>
           <packing>
@@ -117,6 +137,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -130,6 +152,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -146,5 +170,13 @@
       <action-widget response="-6">cancelbutton1</action-widget>
       <action-widget response="-5">okbutton1</action-widget>
     </action-widgets>
+  </object>
+  <object class="GtkListStore" id="services_list">
+    <columns>
+      <!-- column-name service_uri -->
+      <column type="gchararray"/>
+      <!-- column-name service_name -->
+      <column type="gchararray"/>
+    </columns>
   </object>
 </interface>
